tests/regression/errors/more_mut_const_declarations_with_class_asserts_errors.ctp

class (Foo:
    pass
)
def (main:
    f_bad_1 : Foo:mut:const = Foo():mut
)
    